Settings: Reset battery stats [2/2]
AOSiP edits: Use AOSP 'ok' string rather than add our own.

Change-Id: I859c694d13085b48e363b0537c6c1d384acb8989
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>

--- a/res/values/rice_strings.xml
+++ b/res/values/rice_strings.xml
@@ -295,5 +295,9 @@
     <!-- Parallel space -->
     <string name="laboratory_parallel_space_title">Parallel space</string>
     <string name="laboratory_parallel_space_summary">Allow running multiple instances of the same application in parallel.</string>
+    
+    <!-- Battery stats reset -->
+    <string name="battery_stats_reset">Reset stats</string>
+    <string name="battery_stats_message">Battery history stats are going to be reset</string>    
 </resources>
 
