Settings: [2/2] Implement cutout force full screen
Inspired by MIUI and Essential

Squashed commits:
    LineageParts: Remove dividers from expanded desktop/long screen apps list
    LineageParts: Make ApplicationsState.Session lifecycle-aware
    LineageParts: Add an option to force pre-O apps to use full screen aspect ratio
    DisplayCutoutForceFullscreenSettings: Don't force close app
    DisplayCutoutForceFullscreenSettings: Show "No apps" if no apps can be forced
    DisplayCutoutForceFullscreenSettings: Don't trigger check listener if not from user

[UtsavBalar1231]
Adapted to android 13

Change-Id: I49f150df9d07f25794f4af4d43e560591fb9596d
Signed-off-by: Omkar Chandorkar <gotenksIN@aospa.co>
Signed-off-by: hydrangea07 <104114625+hydrangea07@users.noreply.github.com>

--- a/res/values/rice_strings.xml
+++ b/res/values/rice_strings.xml
@@ -171,5 +171,11 @@
     
     <string name="volume_style_title">Volume panel styles</string>
     <string name="my_device_settings">My device</string>
+    
+    <!-- Notch: Full screen apps -->
+    <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
+    <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
+    <string name="display_cutout_force_fullscreen_no_apps">No apps</string>
+    <string name="display_cutout_force_fullscreen_restart_app">Please restart the application to apply the changes.</string>
 </resources>
 
