--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -156,10 +156,6 @@
             android:title="@string/display_cutout_emulation"
             settings:keywords="@string/display_cutout_emulation_keywords" />
 
-        <lineageos.preference.LineagePartsPreference
-            android:key="long_screen_settings"
-            settings:requiresConfig="@*lineageos.platform:bool/config_haveHigherAspectRatioScreen" />
-
         <Preference
             android:key="screensaver"
             android:title="@string/screensaver_settings_title"
@@ -203,6 +199,13 @@
             android:title="@string/wake_when_plugged_or_unplugged_title"
             android:summary="@string/wake_when_plugged_or_unplugged_summary"
             android:defaultValue="@*android:bool/config_unplugTurnsOnScreen" />
+
+        <Preference
+            android:key="display_cutout_force_fullscreen_settings"
+            android:title="@string/display_cutout_force_fullscreen_title"
+            android:summary="@string/display_cutout_force_fullscreen_summary"
+            android:fragment="com.android.settings.display.DisplayCutoutForceFullscreenSettings"
+            settings:controller="com.android.settings.display.DisplayCutoutForceFullscreenPreferenceController" />
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="high_touch_polling_rate_enable"
