Settings: Sensor block per-package switch [2/2]
Change-Id: If1676cfff603c4fd612ca6eda68ebdcb360054c5
Signed-off-by: minaripenguin37 <alexfinhart@gmail.com>

--- a/res/values/rice_strings.xml
+++ b/res/values/rice_strings.xml
@@ -224,5 +224,9 @@
     <string name="package_name">Package name</string>
     <string name="package_version">Package version</string>
     <string name="package_version_text"><xliff:g id="version_num">%1$s</xliff:g></string>
+
+    <!-- Sensor block per-package -->
+    <string name="sensor_block_title">Sensor block per-package</string>
+    <string name="sensor_block_summary">Block access to certain sensors for some apps to save battery</string>
 </resources>
 
