Settings: Make sensor block package list configurable [2/2]
Based on https://github.com/crdroidandroid/android_packages_apps_crDroidSettings/commit/7f9282c5ad0db43391e64b693e85df27d1bc7ccb

Co-Authored-By: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: I7025b3e5b6b79e91810a022d4cd366375b683ef4
Signed-off-by: minaripenguin37 <alexfinhart@gmail.com>

--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -99,11 +99,11 @@
         android:title="@string/battery_charge_cycles"
         android:selectable="false" />
 
-    <com.rice.settings.preferences.SystemSettingSwitchPreference
-        android:key="sensor_block"
+    <Preference
+        android:key="sensor_block_settings"
         android:title="@string/sensor_block_title"
         android:summary="@string/sensor_block_summary"
-        android:defaultValue="false" />
+        android:fragment="com.android.settings.applications.sensors.SensorBlock"/>
 
     <com.android.settings.fuelgauge.PowerGaugePreference
         android:key="battery_temp"
