--- a/res/values/rice_strings.xml
+++ b/res/values/rice_strings.xml
@@ -264,5 +264,12 @@
     <!-- Scarlet Assistant Idle Manager -->
     <string name="idle_manager_title">Scarlet Assistant Idle Manager</string>
     <string name="idle_manager_summary">Scarlet will optimize device\'s power consumption while device is idle and will efficiently boost device performance at every screen wake up.</string>
+
+    <!-- AOD Schedule -->
+    <string name="always_on_display_schedule_title">Always on display schedule</string>
+    <string name="always_on_display_schedule_sunset">Sunset</string>
+    <string name="always_on_display_schedule_sunrise">Sunrise</string>
+    <string name="always_on_display_schedule_mixed_sunset">Turns on from sunset till a time</string>
+    <string name="always_on_display_schedule_mixed_sunrise">Turns on from a time till sunrise</string>
 </resources>
 
