--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -221,6 +221,13 @@
             android:defaultValue="false"
             settings:requiresFeature="lineagehardware:FEATURE_HIGH_TOUCH_SENSITIVITY" />
 
+        <com.rice.settings.preferences.SecureSettingSwitchPreference
+            android:key="screen_off_udfps_enabled"
+            android:title="@string/screen_off_fod_title"
+            android:summary="@string/screen_off_fod_summary"
+            android:defaultValue="true"
+            settings:controller="com.android.settings.security.UdfpsGesturePreferenceController" />
+
         <ListPreference
             android:key="theme"
             android:title="@string/device_theme"
