Settings: Improve force fullscreen settings fragment
* Kanged from https://github.com/AOSP-Krypton/packages_apps_GamingMode, giving authorship.
* Adapted by @ cjh1249131356.

Change-Id: Ib64ccbc5e6ea4a9368fc28b60b780ccdf2e27c90
Co-authored-by: cjh1249131356 <cjh1249131356@gmail.com>
[ghostrider-reborn: misc fixes]
Co-authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: chrisw444 <wandersonrodriguesf1@gmail.com>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: hydrangea07 <104114625+hydrangea07@users.noreply.github.com>

--- a/res/values/rice_strings.xml
+++ b/res/values/rice_strings.xml
@@ -205,5 +205,7 @@
         Prevent this application from showing up in launcher. Requires a launcher restart for changes to take effect.
     </string>
 
+    <string name="search">Search</string>
+    <string name="search_apps">Search apps</string>
 </resources>
 
