Settings: Rework dashboard UI and styles
* Implement ui concept by AYAN98542 to simple round card style
* automatically hide aosp avatar if usercard is enabled
* sync oos/color os style to OOS13 paddings and margins

Co-authored-by: Ayan <79016495+AYAN98542@users.noreply.github.com>
Co-authored-by: Jody Yuantoro <xyzuannihboss@gmail.com>
Signed-off-by: minaripenguin37 <alexfinhart@gmail.com>

--- a/res/layout-land/device_info.xml
+++ b/res/layout-land/device_info.xml
@@ -70,7 +70,8 @@ Copyright (C) The 2022 RiceDroid Project
                         android:gravity="start|center_vertical"
                         android:layout_gravity="start|center_vertical"
                         android:scrollHorizontally="true"
-                        android:singleLine="true"
+                        android:maxLength="12"
+                        android:maxLines="1"
                         android:textColor="?android:attr/colorAccent"
                         android:textSize="16sp" />
                         
