--- a/res/layout/settings_homepage_app_bar_regular_phone_layout.xml
+++ b/res/layout/settings_homepage_app_bar_regular_phone_layout.xml
@@ -39,6 +39,7 @@
             android:id="@+id/account_avatar"
             android:layout_width="@dimen/avatar_length"
             android:layout_height="@dimen/avatar_length"
+            android:layout_marginTop="63dp"
             android:layout_marginEnd="@dimen/avatar_margin_end"
             android:visibility="invisible"
             android:accessibilityTraversalAfter="@id/homepage_title"
