--- a/res/drawable/oos_preference_background_middle.xml
+++ b/res/drawable/oos_preference_background_middle.xml
@@ -11,7 +11,7 @@
      limitations under the License.
 -->
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="?android:attr/colorControlHighlight">
+        android:color="?android:attr/colorAccent">
     <item android:id="@android:id/mask">
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <solid android:color="#FFFFFFFF"/>
