--- a/res/layout/top_level_preference_mt_top.xml
+++ b/res/layout/top_level_preference_mt_top.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/card_height_wave"
+    android:layout_height="@dimen/card_height_round"
     android:layout_marginStart="@dimen/card_margin_start"
     android:layout_marginEnd="@dimen/card_margin_end"
     android:background="@drawable/mt_preference_background_top"
@@ -36,7 +36,7 @@
             android:paddingTop="5dp"
             android:singleLine="true"
             style="@style/op_control_text_style_h6"
-            android:textSize="16sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@android:id/summary"
