Settings: Base and homepage layout customizations [2/3]
Signed-off-by: minaripenguin37 <alexfinhart@gmail.com>

--- a/res/layout/settings_homepage_container_stock_aosp.xml
+++ b/res/layout/settings_homepage_container_stock_aosp.xml
@@ -34,10 +34,15 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <include
+                android:id="@+id/suggestion_container_two_pane"
+                layout="@layout/suggestion_container_two_pane"
+                android:visibility="gone"/>
+
             <FrameLayout
                 android:id="@+id/contextual_cards_content"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/contextual_card_side_margin"
                 android:layout_marginEnd="@dimen/contextual_card_side_margin"/>
 
@@ -61,12 +66,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:gravity="bottom"
-            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <include
                 android:id="@+id/homepage_app_bar_regular_phone_view"
-                layout="@layout/settings_homepage_app_bar_regular_phone_layout"/>
+                layout="@layout/settings_homepage_app_bar_regular_phone_layout_stock_aosp"/>
 
             <include
                 android:id="@+id/homepage_app_bar_two_pane_view"
