--- a/res/layout/xd_base_compact_layout.xml
+++ b/res/layout/xd_base_compact_layout.xml
@@ -38,11 +38,11 @@
           android:id="@id/collapsing_toolbar"
           android:clipToPadding="false"
           android:layout_width="fill_parent"
-          android:layout_height="225dp"
+          android:layout_height="@dimen/xd_toolbar_height"
           app:collapsedTitleTextAppearance="@style/custom_toolbar.Collapsed"
           app:contentScrim="@android:color/transparent"
-          app:expandedTitleMarginEnd="75dp"
-          app:expandedTitleMarginStart="21dp"
+          app:expandedTitleMarginEnd="@dimen/xd_toolbar_expanded_title_margin_end"
+          app:expandedTitleMarginStart="@dimen/xd_toolbar_expanded_title_margin_start"
           app:expandedTitleTextAppearance="@style/custom_toolbar.Expanded"
           app:extraMultilineHeightEnabled="true"
           app:forceApplySystemWindowInsetTop="true"
