--- a/res/layout/xd_base_compact_layout_not_expanded.xml
+++ b/res/layout/xd_base_compact_layout_not_expanded.xml
@@ -32,17 +32,18 @@
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:outlineSpotShadowColor="@android:color/transparent"
-      android:outlineAmbientShadowColor="@android:color/transparent">
+      android:outlineAmbientShadowColor="@android:color/transparent"
+      app:expanded="false">
         
         <com.google.android.material.appbar.CollapsingToolbarLayout
           android:id="@id/collapsing_toolbar"
           android:clipToPadding="false"
           android:layout_width="fill_parent"
-          android:layout_height="225dp"
+          android:layout_height="@dimen/xd_toolbar_height"
           app:collapsedTitleTextAppearance="@style/custom_toolbar.Collapsed"
           app:contentScrim="@android:color/transparent"
-          app:expandedTitleMarginEnd="75dp"
-          app:expandedTitleMarginStart="21dp"
+          app:expandedTitleMarginEnd="@dimen/xd_toolbar_expanded_title_margin_end"
+          app:expandedTitleMarginStart="@dimen/xd_toolbar_expanded_title_margin_start"
           app:expandedTitleTextAppearance="@style/custom_toolbar.Expanded"
           app:extraMultilineHeightEnabled="true"
           app:forceApplySystemWindowInsetTop="true"
