--- a/res/xml/gesture_navigation_settings.xml
+++ b/res/xml/gesture_navigation_settings.xml
@@ -41,6 +41,12 @@
         android:defaultValue="true"
         settings:requiresPackage="org.lineageos.overlay.customization.navbar.nohint" />
 
+    <com.rice.settings.preferences.SystemSettingSwitchPreference
+        android:key="hide_ime_space_enable"
+        android:title="@string/navigation_bar_ime_space_title"
+        android:summary="@string/navigation_bar_ime_space_summary"
+        android:defaultValue="true" />
+
     </PreferenceCategory>
 
     <com.rice.settings.preferences.SecureSettingSwitchPreference
