--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -23,10 +23,10 @@
 
     <com.android.settings.widget.HomepagePreference
         android:fragment="com.android.settings.deviceinfo.aboutphone.MyDeviceInfoFragment"
-        android:icon="@drawable/ic_rui_homepage_about"
+        android:icon="@drawable/op_ic_homepage_about_settings"
         android:key="top_level_about_device"
-        android:order="-180"
-        android:title="@string/my_device_settings"
+        android:order="20"
+        android:title="@string/about_settings"
         android:summary="@string/summary_placeholder"
         settings:highlightableMenuKey="@string/menu_key_about_device"
         settings:controller="com.android.settings.deviceinfo.aboutphone.TopLevelAboutDevicePreferenceController"/>
@@ -156,7 +156,7 @@
         android:fragment="com.android.settings.system.SystemDashboardFragment"
         android:icon="@drawable/op_ic_homepage_system_dashboard_settings"
         android:key="top_level_system"
-        android:order="-45"
+        android:order="10"
         android:title="@string/header_category_system"
         android:summary="@string/system_dashboard_summary"
         settings:highlightableMenuKey="@string/menu_key_system"/>
