--- a/res/layout/top_level_preference_about_round_circle.xml
+++ b/res/layout/top_level_preference_about_round_circle.xml
@@ -1,50 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:background="@drawable/rice_preference_middle_background_card"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="85dp"
     android:layout_marginStart="@dimen/card_margin_start_aqua"
     android:layout_marginEnd="@dimen/card_margin_end_aqua"
-    android:layout_marginTop="2dp"
-    android:paddingEnd="6dp"
-    android:paddingStart="20dp"
+    android:layout_marginBottom="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingEnd="6dp"
+        android:paddingStart="20dp"
+        app:cardElevation="0dp"
+        app:cardCornerRadius="32dp">
+      
+        <com.rice.utils.aboutWallpaperView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:gravity="center"
+            android:elevation="0dp"
+            android:contentDescription="@null"
+            android:orientation="horizontal" />
+  
     <LinearLayout
         android:gravity="center_vertical"
         android:layout_width="fill_parent"
-        android:layout_marginVertical="6dp"
         android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="0.0dip"
             android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
+            android:layout_marginStart="36dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1.0"
             android:layout_marginEnd="10dp">
             <TextView
                 android:ellipsize="marquee"
-                android:id="@android:id/title"
+                android:id="@android:id/summary"
                 android:fadingEdge="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/wellbeing_title"
+                android:layout_marginTop="20.0dip"
+                android:background="@drawable/homepage_text_bg"
+            	android:paddingHorizontal="8dp"
+            	android:paddingVertical="2dp"
                 android:singleLine="true"
-                android:textColor="@color/op_control_text_color_primary"
+                android:textColor="@color/op_control_text_color_primary_inverse"
                 style="@style/op_control_text_style_h6" />
 
             <TextView
-                android:id="@android:id/summary"
+                android:id="@android:id/title"
                 style="@style/op_control_text_style_body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_below="@android:id/title"
                 android:layout_alignStart="@android:id/title"
                 android:layout_alignLeft="@android:id/title"
-                android:layout_marginTop="2.0dip"
                 android:maxLines="4"
                 android:textColor="@color/op_control_text_color_secondary" />
         </RelativeLayout>
@@ -53,17 +68,28 @@
             android:id="@id/icon_frame"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="-33dp"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp">
+            android:layout_marginEnd="38dp">
 
-            <androidx.preference.internal.PreferenceImageView
-                android:src="@drawable/ic_homepage_wellbeing"
-                android:padding="1.5dip"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:tint="@color/rui_divider_bg"
-                app:maxHeight="52.5dp"
-                app:maxWidth="52.5dp" />
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="68dp"
+        android:layout_height="85dp"
+        app:cardElevation="0dp"
+        app:cardCornerRadius="14dp"
+        app:cardBackgroundColor="@color/op_control_text_color_primary_inverse"
+        app:strokeColor="@color/op_control_text_color_primary"
+        app:strokeWidth="1dp">
+
+       <ImageView
+            android:layout_width="34dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="6dp"
+            android:layout_gravity="center"
+            android:tint="@color/op_control_text_color_primary"
+            android:src="@drawable/ricelogo" />
+
+   	 	</com.google.android.material.card.MaterialCardView>
 
             <androidx.preference.internal.PreferenceImageView
                 android:id="@android:id/icon"
@@ -84,4 +110,5 @@
             android:layout_marginStart="0dp"
             android:layout_marginEnd="0dp"/>
     </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
