--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -172,7 +172,9 @@
         <com.rice.settings.preferences.SecureSettingSwitchPreference
             android:key="pulse_ambient_light"
             android:title="@string/pulse_ambient_light_title"
-            android:summary="@string/pulse_ambient_light_summary" />
+            android:summary="@string/pulse_ambient_light_summary"
+            android:dependency="ambient_display_notification"
+            />
 
         <com.rice.settings.preferences.SecureSettingListPreference
             android:key="pulse_ambient_light_layout"
