--- a/res/layout/top_level_preference_about_high.xml
+++ b/res/layout/top_level_preference_about_high.xml
@@ -23,6 +23,8 @@
             android:gravity="center"
             android:elevation="0dp"
             android:contentDescription="@null"
+            android:foreground="@drawable/wallpaper_scrim"
+            android:background="@drawable/wallpaper_scrim"
             android:orientation="horizontal" />
   
     <LinearLayout
