--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -105,6 +105,12 @@
         android:summary="@string/sensor_block_summary"
         android:fragment="com.android.settings.applications.sensors.SensorBlock"/>
 
+    <com.rice.settings.preferences.SystemSettingSwitchPreference
+        android:key="scarlet_idle_assistant_manager"
+        android:title="@string/idle_manager_title"
+        android:summary="@string/idle_manager_summary"
+        android:defaultValue="false" />
+
     <Preference
         android:key="sleep_mode"
         android:title="@string/sleep_mode_title"
