--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -105,11 +105,11 @@
         android:summary="@string/sensor_block_summary"
         android:fragment="com.android.settings.applications.sensors.SensorBlock"/>
 
-    <com.rice.settings.preferences.SystemSettingSwitchPreference
-        android:key="scarlet_idle_assistant_manager"
+    <Preference
+        android:key="scarlet_settings"
         android:title="@string/idle_manager_title"
-        android:summary="@string/idle_manager_summary"
-        android:defaultValue="false" />
+        android:summary="@string/idle_manager_pref_summary"
+        android:fragment="com.android.settings.fuelgauge.scarlet.Scarlet" />
 
     <Preference
         android:key="sleep_mode"
